# ptr_labo7

./: .gitignore  README.md  de1soc.sh
code/: load_setup.c  load_setup.h  main.c  video_setup.c  video_setup.h
code/de1soc_utils/: de1soc_audio.h  de1soc_video.c
code/étape 1/: CMakeLists.txt  video_setup.c
code/étape 1/de1soc_utils/: common.h  convolution.c  convolution.h  de1soc_audio.c  de1soc_io.c  de1soc_io.h  de1soc_video.h  fft_utils.c  fft_utils.h  grayscale.c  grayscale.h  image.h  rtq.c
code/étape 2/: canary.c  canary.h  commun.h  load_setup.c  main.c  video_setup.c  video_setup.h  watchdog.c  watchdog.h
code/étape 2/de1soc_utils/: rtq.h
code/étape 3/: CMakeLists.txt  commun.h  load_setup.h  main.c  video_setup.c  video_setup.h  watchdog.c  watchdog.h
doc/: rapport.tex
